crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__pair_projection__bad_decoder_second.snap
---
source: crates/nash-codegen/src/optimizer_tests/pair_projection.rs
expression: "format!(\"{}\\n--- isolated Core before\\n{}\\n--- isolated Core after\\n{}\",\nfixture.snapshot(), pretty(anf), pretty(isolated))"
---
--- unoptimized Core
case@Pair unConstrData (con data (I 7)) of
  Pair x#19 y#20 -> y#20
--- unoptimized UPLC
(program 1.1.0
  (case [(builtin unConstrData) (con data (I 7))] (lam x_19 (lam y_20 y_20))))
--- optimized Core
let anf#3 : pair int (list Data) = unConstrData (con data (I 7)) in
case@Pair anf#3 of
  Pair x#1 y#2 -> y#2
--- optimized UPLC
(program 1.1.0
  [(lam anf_4 (case anf_4 (lam x_5 (lam y_6 y_6))))
    [(builtin unConstrData) (con data (I 7))]])
--- result
error: Runtime(MalFormedData(Integer(7)))
--- logs
[]
--- budget
cpu: 100, memory: 100
--- isolated Core before
let anf#92 : pair int (list Data) = unConstrData (con data (I 7)) in
case@Pair anf#92 of
  Pair x#19 y#20 -> y#20
--- isolated Core after
let anf#92 : pair int (list Data) = unConstrData (con data (I 7)) in
case@Pair anf#92 of
  Pair x#19 y#20 -> y#20
