crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__pair_projection__body.snap
---
source: crates/nash-codegen/src/optimizer_tests/pair_projection.rs
expression: "format!(\"{}\\n--- isolated Core before\\n{}\\n--- isolated Core after\\n{}\",\nfixture.snapshot(), pretty(anf), pretty(isolated))"
---
--- unoptimized Core
case@Pair (trace "subject" in (con (pair integer integer) (7, 8))) of
  Pair x#33 y#34 -> trace "body" in addInteger x#33 1
--- unoptimized UPLC
(program 1.1.0
  (case
    (force
      [[(force (builtin trace)) (con string "subject")]
        (delay (con (pair integer integer) (7, 8)))])
    (lam x_33
      (lam y_34
        (force
          [[(force (builtin trace)) (con string "body")]
            (delay [[(builtin addInteger) x_33] (con integer 1)])])))))
--- optimized Core
let anf#3 : pair int int = trace "subject" in (con (pair integer integer) (7, 8)) in
case@Pair anf#3 of
  Pair x#1 y#2 -> trace "body" in addInteger x#1 1
--- optimized UPLC
(program 1.1.0
  [(lam builtin_7
    [(lam anf_4
      (case
        anf_4
        (lam x_5
          (lam y_6
            (force
              [[builtin_7 (con string "body")]
                (delay [[(builtin addInteger) x_5] (con integer 1)])])))))
      (force
        [[builtin_7 (con string "subject")] (delay (con (pair integer integer) (7, 8)))])])
    (force (builtin trace))])
--- result
(con integer 8)
--- logs
["subject", "body"]
--- budget
cpu: 588304, memory: 2466
--- isolated Core before
let anf#99 : pair int int = trace "subject" in (con (pair integer integer) (7, 8)) in
case@Pair anf#99 of
  Pair x#33 y#34 -> trace "body" in addInteger x#33 1
--- isolated Core after
let anf#99 : pair int int = trace "subject" in (con (pair integer integer) (7, 8)) in
case@Pair anf#99 of
  Pair x#33 y#34 -> trace "body" in addInteger x#33 1
