crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__pair_projection__delay.snap
---
source: crates/nash-codegen/src/optimizer_tests/pair_projection.rs
expression: "format!(\"{}\\n--- isolated Core before\\n{}\\n--- isolated Core after\\n{}\",\nfixture.snapshot(), pretty(anf), pretty(isolated))"
---
--- unoptimized Core
force (case@Pair (trace "subject" in (con (pair integer integer) (7, 8))) of
  Pair x#39 y#40 -> delay x#39)
--- unoptimized UPLC
(program 1.1.0
  (force
    (case
      (force
        [[(force (builtin trace)) (con string "subject")]
          (delay (con (pair integer integer) (7, 8)))])
      (lam x_39 (lam y_40 (delay x_39))))))
--- optimized Core
let anf#3 : pair int int = trace "subject" in (con (pair integer integer) (7, 8)) in
let anf#4 : @delay int = case@Pair anf#3 of
  Pair x#1 y#2 -> delay x#1 in
force anf#4
--- optimized UPLC
(program 1.1.0
  [(lam builtin_9
    [(lam anf_5
      [(lam anf_8 (force anf_8)) (case anf_5 (lam x_6 (lam y_7 (delay x_6))))])
      (force
        [[builtin_9 (con string "subject")] (delay (con (pair integer integer) (7, 8)))])])
    (force (builtin trace))])
--- result
(con integer 7)
--- logs
["subject"]
--- budget
cpu: 283598, memory: 1532
--- isolated Core before
let anf#102 : pair int int = trace "subject" in (con (pair integer integer) (7, 8)) in
let anf#103 : @delay int = case@Pair anf#102 of
  Pair x#39 y#40 -> delay x#39 in
force anf#103
--- isolated Core after
let anf#102 : pair int int = trace "subject" in (con (pair integer integer) (7, 8)) in
let anf#103 : @delay int = case@Pair anf#102 of
  Pair x#39 y#40 -> delay x#39 in
force anf#103
